k8s/first_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: k8s-first-service
  name: k8s-first-service
  namespace: k8s-hands-on
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8888
  selector:
    name: k8s-first-app
